--- a/views/records.pug
+++ b/views/records.pug
@@ -8,22 +8,6 @@ block content
 		header
 			h2 Records
 
-			// .stats-card
-			// 	header
-			// 		h3 Mercies
-
-			// 	table
-			// 		tbody
-			// 			each n, key in mercy
-			// 				tr(class=(key === 0 ? 'top' : ''))
-			// 					td.rank
-			// 						span.pos #{n.rank}.
-			// 						| #{n.player}
-			// 					td.text-r= n.mercy
-
-			// 	footer
-			// 		a(href="table.html") View full list
-			// 			span.icon
-
-
-			// most wins
+			ul
+				li
+					span.test Test
