--- a/public/init.css
+++ b/public/init.css
@@ -811,6 +811,7 @@ body {
 #nav-main li {
   margin-bottom: 0.3rem;
   background: #5a0f61;
+  background: #28092b;
 }
 #nav-main li a {
   color: #fff;
@@ -823,10 +824,11 @@ body {
 }
 #nav-main > ul > li .active + .sub-nav {
   display: block;
+  display: none;
 }
 #nav-main > ul > li > .sub-nav {
-  max-height: 400px;
-  overflow-y: scroll;
+  max-height: 600px;
+  overflow-y: auto;
   display: none;
 /* width */
 /* Track */
@@ -871,10 +873,6 @@ body {
   border-left-color: #eaff04;
   text-decoration: none;
 }
-#nav-main nav {
-  padding: 0.5rem 0;
-  border-bottom: 1px solid rgba(255,255,255,0.33);
-}
 #nav-main nav:last-child {
   border-bottom: none;
 }
@@ -886,8 +884,10 @@ body {
   font-size: 0.7rem;
   text-transform: uppercase;
   font-weight: 400;
-  margin: 0.5rem 0;
   padding-left: calc(1rem + 5px);
+  background: #ff3c74;
+  font-weight: bold;
+  padding: 0.6rem 1.5rem;
 }
 #nav-main nav li > a {
   padding: 0.5rem calc(1rem + 5px + 0.5rem);
@@ -904,6 +904,79 @@ body {
 }
 .page-filter .drop-down_list.active {
   display: block;
+}
+header .stat-nav {
+  cursor: pointer;
+  display: inline-block;
+}
+header .stat-nav:hover {
+  color: #ff2882;
+}
+header .sub-nav {
+  width: 95%;
+  height: 200px;
+  padding: 1rem;
+  font-size: 0;
+  background: #ff2882;
+  margin-top: -1.5rem;
+  margin-bottom: 3rem;
+}
+header .sub-nav.active {
+  -webkit-animation: slideUp 0.2s ease-in-out;
+          animation: slideUp 0.2s ease-in-out;
+  display: block;
+}
+header .sub-nav nav {
+  display: inline-block;
+  width: 33%;
+  vertical-align: top;
+}
+header .sub-nav nav h2 {
+  color: #fff;
+}
+header .sub-nav nav li {
+  font-size: 1rem;
+  color: #fff;
+}
+.compare-results .set-head {
+  font-size: 1.4rem;
+  margin: 3rem 0 1rem 0;
+  display: block;
+}
+.compare-results .set {
+  display: block;
+  border: 1px solid #eee;
+}
+.compare-results .set .row {
+  display: block;
+  font-size: 0;
+}
+.compare-results .set .row:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.compare-results .set .label,
+.compare-results .set .player1,
+.compare-results .set .player2 {
+  display: inline-block;
+  width: 33.33%;
+  font-size: 0.9rem;
+  padding: 0.5rem;
+  border-right: 1px solid #eee;
+}
+.compare-results .set .player1,
+.compare-results .set .player2 {
+  text-align: center;
+  font-weight: bold;
+}
+.compare-results .set .player1.highlight {
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(237,237,237,0.75)), color-stop(50%, rgba(237,237,237,0)), to(rgba(255,255,255,0)));
+  background: linear-gradient(90deg, rgba(237,237,237,0.75) 0, rgba(237,237,237,0) 50%, rgba(255,255,255,0));
+  color: #ff2882;
+}
+.compare-results .set .player2.highlight {
+  background: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(237,237,237,0.75)), color-stop(50%, rgba(237,237,237,0)), to(rgba(255,255,255,0)));
+  background: linear-gradient(270deg, rgba(237,237,237,0.75) 0, rgba(237,237,237,0) 50%, rgba(255,255,255,0));
+  color: #ff2882;
 }
 @-webkit-keyframes slideUp {
   0 {
