--- a/public/init.css
+++ b/public/init.css
@@ -190,7 +190,7 @@ nav ul,
 nav li,
 form .optionset,
 form .optionset li,
-.drop-down_list {
+.drop-down_list ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -280,7 +280,7 @@ select {
   outline: 0;
 }
 .form_checkbox-wrapper {
-  display: inline-block;
+  display: block;
   position: static;
 }
 .form_checkbox-wrapper li {
@@ -298,17 +298,23 @@ select {
   line-height: 1.2;
   padding-left: 17px;
 }
-.form_checkbox-wrapper input[type=checkbox] {
-  margin-left: 0;
-}
-.form_checkbox-wrapper label {
-  text-transform: none;
-  display: inline-block;
-}
 /* custom variables */
-box-shadow: inset 0 0 1px 2px $outline-color {
+label {
+  font-weight: 600;
+}
+.form-group label {
   display: block;
   margin-bottom: 0.5rem;
+}
+.form-group {
+  margin-bottom: 1.7rem;
+  position: relative;
+}
+.form-group:not(.form-group-checkbox):not(.form-group-radio) > label {
+  width: 100%;
+}
+.form-group .button {
+  margin-bottom: 0;
 }
 :root {
   font-family: 'Nunito', sans-serif;
@@ -359,6 +365,453 @@ a:focus {
 ::selection {
   background-color: #ff2882;
   color: #fff;
+}
+input[type='text'],
+input[type='number'],
+input[type='date'],
+input[type='password'],
+input[type='email'],
+textarea,
+.dropdown,
+select {
+  width: 100%;
+  font-family: 'Nunito', sans-serif;
+  border: none;
+  background-color: #37003c;
+  color: #242424;
+  border-radius: 7px;
+  padding: 0.8em 0.8em;
+  max-width: 295px;
+}
+input[type='text']:focus,
+input[type='number']:focus,
+input[type='date']:focus,
+input[type='password']:focus,
+input[type='email']:focus,
+textarea:focus,
+.dropdown:focus,
+select:focus {
+  -webkit-box-shadow: inset 0 0 1px 2px #20a8d2;
+          box-shadow: inset 0 0 1px 2px #20a8d2;
+  outline: 0;
+  color: #fff;
+}
+input[type='text'].error,
+input[type='number'].error,
+input[type='date'].error,
+input[type='password'].error,
+input[type='email'].error,
+textarea.error,
+.dropdown.error,
+select.error,
+input[type='text']:invalid,
+input[type='number']:invalid,
+input[type='date']:invalid,
+input[type='password']:invalid,
+input[type='email']:invalid,
+textarea:invalid,
+.dropdown:invalid,
+select:invalid {
+  -webkit-box-shadow: inset 0 0 1px 2px #eb5757;
+          box-shadow: inset 0 0 1px 2px #eb5757;
+}
+input[type='text'].valid,
+input[type='number'].valid,
+input[type='date'].valid,
+input[type='password'].valid,
+input[type='email'].valid,
+textarea.valid,
+.dropdown.valid,
+select.valid {
+  -webkit-box-shadow: inset 0 0 1px 2px #6aec6a;
+          box-shadow: inset 0 0 1px 2px #6aec6a;
+}
+input[type='text']::-webkit-input-placeholder, input[type='number']::-webkit-input-placeholder, input[type='date']::-webkit-input-placeholder, input[type='password']::-webkit-input-placeholder, input[type='email']::-webkit-input-placeholder, textarea::-webkit-input-placeholder, .dropdown::-webkit-input-placeholder, select::-webkit-input-placeholder {
+  font-style: italic;
+  color: $placeholder-color;
+}
+input[type='text']::-moz-placeholder, input[type='number']::-moz-placeholder, input[type='date']::-moz-placeholder, input[type='password']::-moz-placeholder, input[type='email']::-moz-placeholder, textarea::-moz-placeholder, .dropdown::-moz-placeholder, select::-moz-placeholder {
+  font-style: italic;
+  color: $placeholder-color;
+}
+input[type='text']:-ms-input-placeholder, input[type='number']:-ms-input-placeholder, input[type='date']:-ms-input-placeholder, input[type='password']:-ms-input-placeholder, input[type='email']:-ms-input-placeholder, textarea:-ms-input-placeholder, .dropdown:-ms-input-placeholder, select:-ms-input-placeholder {
+  font-style: italic;
+  color: $placeholder-color;
+}
+input[type='text']::-ms-input-placeholder, input[type='number']::-ms-input-placeholder, input[type='date']::-ms-input-placeholder, input[type='password']::-ms-input-placeholder, input[type='email']::-ms-input-placeholder, textarea::-ms-input-placeholder, .dropdown::-ms-input-placeholder, select::-ms-input-placeholder {
+  font-style: italic;
+  color: $placeholder-color;
+}
+input[type='text']::placeholder,
+input[type='number']::placeholder,
+input[type='date']::placeholder,
+input[type='password']::placeholder,
+input[type='email']::placeholder,
+textarea::placeholder,
+.dropdown::placeholder,
+select::placeholder {
+  font-style: italic;
+  color: $placeholder-color;
+}
+input[type='text']:-moz-read-only:not(select), input[type='number']:-moz-read-only:not(select), input[type='date']:-moz-read-only:not(select), input[type='password']:-moz-read-only:not(select), input[type='email']:-moz-read-only:not(select), textarea:-moz-read-only:not(select), .dropdown:-moz-read-only:not(select), select:-moz-read-only:not(select) {
+  background-color: #1c203f;
+  cursor: no-drop;
+}
+input[type='text']:read-only:not(select),
+input[type='number']:read-only:not(select),
+input[type='date']:read-only:not(select),
+input[type='password']:read-only:not(select),
+input[type='email']:read-only:not(select),
+textarea:read-only:not(select),
+.dropdown:read-only:not(select),
+select:read-only:not(select) {
+  background-color: #1c203f;
+  cursor: no-drop;
+}
+input[type='text']:-moz-read-only:not(select):focus, input[type='number']:-moz-read-only:not(select):focus, input[type='date']:-moz-read-only:not(select):focus, input[type='password']:-moz-read-only:not(select):focus, input[type='email']:-moz-read-only:not(select):focus, textarea:-moz-read-only:not(select):focus, .dropdown:-moz-read-only:not(select):focus, select:-moz-read-only:not(select):focus {
+  box-shadow: none;
+  color: #242424;
+}
+input[type='text']:read-only:not(select):focus,
+input[type='number']:read-only:not(select):focus,
+input[type='date']:read-only:not(select):focus,
+input[type='password']:read-only:not(select):focus,
+input[type='email']:read-only:not(select):focus,
+textarea:read-only:not(select):focus,
+.dropdown:read-only:not(select):focus,
+select:read-only:not(select):focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #242424;
+}
+input[type='text']::-webkit-calendar-picker-indicator,
+input[type='number']::-webkit-calendar-picker-indicator,
+input[type='date']::-webkit-calendar-picker-indicator,
+input[type='password']::-webkit-calendar-picker-indicator,
+input[type='email']::-webkit-calendar-picker-indicator,
+textarea::-webkit-calendar-picker-indicator,
+.dropdown::-webkit-calendar-picker-indicator,
+select::-webkit-calendar-picker-indicator {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  text-indent: 0.1;
+  text-overflow: '';
+}
+select::-ms-expand {
+  display: none;
+}
+.dropdown,
+select {
+  padding: 0.8em 0.8em;
+  padding-right: 30px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='451.847' height='451.847'%3E%3Cpath style='fill:%237F84B2' d='M225.923 354.706c-8.098 0-16.195-3.092-22.369-9.263L9.27 151.157c-12.359-12.359-12.359-32.397 0-44.751 12.354-12.354 32.388-12.354 44.748 0l171.905 171.915 171.906-171.909c12.359-12.354 32.391-12.354 44.744 0 12.365 12.354 12.365 32.392 0 44.751L248.292 345.449c-6.177 6.172-14.274 9.257-22.369 9.257z'/%3E%3C/svg%3E");
+  background-size: 14px;
+  background-position: calc(100% - 14px) calc(100% - 48%);
+  background-repeat: no-repeat;
+}
+.dropdown option,
+select option {
+  padding: 0.8em 0.8em 0;
+}
+label.error {
+  color: #420e0e;
+  font-weight: normal;
+  padding: 0.5em 0;
+}
+form h2 {
+  font-size: 1.2rem;
+  margin-bottom: 2em;
+}
+.message {
+  padding: 0.2em 0.5em;
+  display: inline-block;
+}
+.message.success {
+  color: #fff;
+  background: #4caf50;
+}
+.message.error {
+  color: #fbfbfb;
+  background: #d75350;
+}
+input + .error,
+textarea + .error,
+select + .error {
+  position: relative;
+  margin-top: 0.5rem;
+}
+input + .error:before,
+textarea + .error:before,
+select + .error:before {
+  content: '';
+  display: block;
+  background: #d75350;
+  position: absolute;
+  top: -5px;
+  left: 10px;
+  height: 10px;
+  width: 10px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.form_checkbox-wrapper + .form_checkbox-wrapper {
+  margin-left: 3rem;
+}
+.form_checkbox-wrapper input[type="checkbox"] {
+  opacity: 0;
+  display: none;
+}
+.form_checkbox-wrapper label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  padding-left: 2.7em;
+  font-weight: 400;
+/*Outer box of the fake checkbox*/
+/*Checkmark of the fake checkbox*/
+}
+.form_checkbox-wrapper label::before,
+.form_checkbox-wrapper label::after {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0px;
+}
+.form_checkbox-wrapper label:before {
+  height: 1.7em;
+  width: 1.7em;
+  background-color: rgba(255,40,130,0.2);
+  border-radius: 50%;
+}
+.form_checkbox-wrapper label::after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.91668 7.33891L1.30972 4.73195L0.190308 5.85137L3.91668 9.57774L11.6014 1.89304L10.482 0.773621L3.91668 7.33891Z' fill='white'/%3E%3C/svg%3E");
+  height: 1.7em;
+  width: 1.7em;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.form_checkbox-wrapper input[type="checkbox"]:checked + label {
+  font-weight: 700;
+}
+.form_checkbox-wrapper input[type="checkbox"] + label::after {
+  content: none;
+}
+.form_checkbox-wrapper input[type="checkbox"]:checked + label::after {
+  content: "";
+}
+.form_checkbox-wrapper input[type="checkbox"]:focus + label::before {
+  outline: #37003c auto 5px;
+}
+.form_checkbox-wrapper:hover label::before {
+  background: rgba(255,40,130,0.4);
+  outline: 0;
+}
+.form_checkbox-wrapper input:checked + label::before {
+  background-color: #ff2882;
+}
+.button,
+.button-secondary,
+.button-negative,
+.button-search,
+.button-text {
+  border: 2px solid transparent;
+  background: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
+  display: inline-block;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  text-decoration: none;
+}
+.button:disabled,
+.button-secondary:disabled,
+.button-negative:disabled {
+  background-color: #c2c5c4;
+  color: #fff;
+  cursor: default;
+}
+.button:disabled:hover,
+.button-secondary:disabled:hover,
+.button-negative:disabled:hover {
+  background-color: #989898;
+  color: #fff;
+}
+.button {
+  background-color: #37003c;
+  border-radius: 44px;
+  color: #fff;
+  padding: 0.6em 1.4em;
+  min-width: 4rem;
+  font-size: 0.9rem;
+  text-transform: initial;
+  position: relative;
+  overflow: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+.button:hover,
+.button:focus {
+  background-color: #ff2882;
+  color: #fff;
+  outline: none;
+}
+.button:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  -webkit-transform: scale(10, 10);
+          transform: scale(10, 10);
+  opacity: 0;
+  -webkit-transition: opacity 1s, -webkit-transform 0.5s;
+  transition: opacity 1s, -webkit-transform 0.5s;
+  transition: transform 0.5s, opacity 1s;
+  transition: transform 0.5s, opacity 1s, -webkit-transform 0.5s;
+}
+.button:active:after {
+  -webkit-transform: scale(0, 0);
+          transform: scale(0, 0);
+  opacity: 0.3;
+  -webkit-transition: 0s;
+  transition: 0s;
+}
+.button-secondary {
+  background-color: #ff2882;
+  border-radius: 44px;
+  color: #fff;
+  padding: 0.6em 1.4em;
+  min-width: 4rem;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+.button-secondary:hover,
+.button-secondary:focus {
+  background-color: #d2048b;
+  color: #fff;
+  outline: none;
+}
+.button-secondary:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  -webkit-transform: scale(10, 10);
+          transform: scale(10, 10);
+  opacity: 0;
+  -webkit-transition: opacity 1s, -webkit-transform 0.5s;
+  transition: opacity 1s, -webkit-transform 0.5s;
+  transition: transform 0.5s, opacity 1s;
+  transition: transform 0.5s, opacity 1s, -webkit-transform 0.5s;
+}
+.button-secondary:active:after {
+  -webkit-transform: scale(0, 0);
+          transform: scale(0, 0);
+  opacity: 0.3;
+  -webkit-transition: 0s;
+  transition: 0s;
+}
+.button-negative {
+  background-color: transparent;
+  border-radius: 44px;
+  color: #e05b52;
+  padding: 0.6em 1.4em;
+  min-width: 4rem;
+  font-size: 0.9rem;
+  text-transform: initial;
+  position: relative;
+  overflow: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  border-color: #e05b52;
+}
+.button-negative:hover,
+.button-negative:focus {
+  background-color: transparent;
+  color: #e05b52;
+  outline: none;
+}
+.button-negative:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  -webkit-transform: scale(10, 10);
+          transform: scale(10, 10);
+  opacity: 0;
+  -webkit-transition: opacity 1s, -webkit-transform 0.5s;
+  transition: opacity 1s, -webkit-transform 0.5s;
+  transition: transform 0.5s, opacity 1s;
+  transition: transform 0.5s, opacity 1s, -webkit-transform 0.5s;
+}
+.button-negative:active:after {
+  -webkit-transform: scale(0, 0);
+          transform: scale(0, 0);
+  opacity: 0.3;
+  -webkit-transition: 0s;
+  transition: 0s;
+}
+.button-search {
+  background: url("data:image/svg+xml;charset=utf8,%3Csvg width='19' height='19' viewBox='0 0 19 19' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.71 16.29L14.31 12.9C15.407 11.5025 16.0022 9.77666 16 8C16 6.41775 15.5308 4.87103 14.6518 3.55544C13.7727 2.23985 12.5233 1.21447 11.0615 0.608967C9.59966 0.00346625 7.99113 -0.15496 6.43928 0.153721C4.88743 0.462403 3.46197 1.22433 2.34315 2.34315C1.22433 3.46197 0.462403 4.88743 0.153721 6.43928C-0.15496 7.99113 0.00346625 9.59966 0.608967 11.0615C1.21447 12.5233 2.23985 13.7727 3.55544 14.6518C4.87103 15.5308 6.41775 16 8 16C9.77666 16.0022 11.5025 15.407 12.9 14.31L16.29 17.71C16.383 17.8037 16.4936 17.8781 16.6154 17.9289C16.7373 17.9797 16.868 18.0058 17 18.0058C17.132 18.0058 17.2627 17.9797 17.3846 17.9289C17.5064 17.8781 17.617 17.8037 17.71 17.71C17.8037 17.617 17.8781 17.5064 17.9289 17.3846C17.9797 17.2627 18.0058 17.132 18.0058 17C18.0058 16.868 17.9797 16.7373 17.9289 16.6154C17.8781 16.4936 17.8037 16.383 17.71 16.29ZM2 8C2 6.81332 2.3519 5.65328 3.01119 4.66658C3.67047 3.67989 4.60755 2.91085 5.7039 2.45673C6.80026 2.0026 8.00666 1.88378 9.17055 2.11529C10.3344 2.3468 11.4035 2.91825 12.2426 3.75736C13.0818 4.59648 13.6532 5.66558 13.8847 6.82946C14.1162 7.99335 13.9974 9.19975 13.5433 10.2961C13.0892 11.3925 12.3201 12.3295 11.3334 12.9888C10.3467 13.6481 9.18669 14 8 14C6.4087 14 4.88258 13.3679 3.75736 12.2426C2.63214 11.1174 2 9.5913 2 8Z' fill='%237F84B2'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  padding: 0.7em;
+  position: absolute;
+  background-size: 19px;
+  right: 0.5em;
+  background-position: center;
+  height: 3em;
+  width: 3em;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.button-search span {
+  display: none;
+}
+.button + .button {
+  margin-left: 2rem;
+}
+.button-text {
+  color: #242424;
+}
+.button-text:hover,
+.button-text:focus {
+  color: #242424;
+  outline: 2px dotted;
 }
 .stats-card-wrapper {
   display: grid;
@@ -687,6 +1140,8 @@ table .has-icon_label {
   max-height: 40rem;
   overflow-y: auto;
   padding: 1rem 0;
+  cursor: default;
+  font-weight: 400;
 }
 .drop-down_list:before {
   background: -webkit-gradient(linear, right top, left top, from(#ff2882), to(#963cff));
@@ -699,15 +1154,28 @@ table .has-icon_label {
   top: 0;
   width: 100%;
 }
+.drop-down_list.pad {
+  padding: 1rem;
+}
+.drop-down_list ul {
+  font-size: 0.9rem;
+}
 .drop-down_list li {
   color: #333;
-  padding: 0.5rem 1rem;
+  padding: 0.7rem 1rem;
   cursor: pointer;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+  border-bottom: 1px solid #e8e8e8;
 }
 .drop-down_list li:hover {
   font-weight: 700;
+}
+.drop-down_list li:last-child {
+  border-bottom: none;
+}
+.drop-down_list button {
+  font-size: 0.8rem;
 }
 .filter-button_reset {
   margin-left: auto;
@@ -744,6 +1212,53 @@ table .has-icon_label {
 }
 .filter-button_reset span:hover i {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 28C20.3734 28 22.6935 27.2962 24.6668 25.9776C26.6402 24.6591 28.1783 22.7849 29.0866 20.5922C29.9948 18.3995 30.2324 15.9867 29.7694 13.6589C29.3064 11.3312 28.1635 9.19295 26.4853 7.51472C24.8071 5.83649 22.6689 4.6936 20.3411 4.23058C18.0133 3.76756 15.6005 4.0052 13.4078 4.91345C11.2151 5.8217 9.34094 7.35977 8.02236 9.33316C6.70379 11.3066 6 13.6266 6 16V22.2L2.4 18.6L1 20L7 26L13 20L11.6 18.6L8 22.2V16C8 14.0222 8.58649 12.0888 9.6853 10.4443C10.7841 8.79981 12.3459 7.51809 14.1732 6.76121C16.0004 6.00433 18.0111 5.8063 19.9509 6.19215C21.8907 6.578 23.6725 7.53041 25.0711 8.92894C26.4696 10.3275 27.422 12.1093 27.8079 14.0491C28.1937 15.9889 27.9957 17.9996 27.2388 19.8268C26.4819 21.6541 25.2002 23.2159 23.5557 24.3147C21.9112 25.4135 19.9778 26 18 26V28Z' fill='%23ff2882'/%3E%3C/svg%3E");
+}
+.slider {
+  margin: 3rem 0 2rem;
+}
+.slider + footer {
+  text-align: right;
+}
+.noUi-tooltip,
+.noUi-active .noUi-tooltip {
+  display: block;
+}
+.noUi-tooltip {
+  border: none;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 0.8rem;
+  color: #777676;
+}
+.noUi-target {
+  padding: 0 15px;
+  height: 4px;
+  border: none;
+  background: #e5e5e5;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.noUi-horizontal .noUi-handle {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  top: -14px;
+  border-color: #ff2882;
+  border-width: 2px;
+  cursor: pointer;
+}
+.noUi-horizontal .noUi-handle:before,
+.noUi-horizontal .noUi-handle:after {
+  display: none;
+}
+.noUi-horizontal .noUi-handle:focus {
+  outline: none;
+  background: #ff2882;
+}
+.noUi-connect {
+  background: #ff2882;
 }
 body {
   min-height: 100vh;
@@ -787,9 +1302,7 @@ body {
 }
 #main {
   grid-area: main;
-  padding-top: 3.4rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding: 3.4rem 2rem;
   position: relative;
   max-width: 1350px;
 }
@@ -979,7 +1492,7 @@ header .sub-nav nav li {
   color: #ff2882;
 }
 @-webkit-keyframes slideUp {
-  0 {
+  0% {
     -webkit-transform: translateY(5%);
             transform: translateY(5%);
     opacity: 0;
@@ -993,7 +1506,7 @@ header .sub-nav nav li {
   }
 }
 @keyframes slideUp {
-  0 {
+  0% {
     -webkit-transform: translateY(5%);
             transform: translateY(5%);
     opacity: 0;
