--- a/views/stats.pug
+++ b/views/stats.pug
@@ -68,22 +68,12 @@ block content
 							li(role="option")
 								.form_checkbox-wrapper
 									input(type="checkbox", name="checkb", id="checkb" )
-									label(for="checkb") 2020/21
+									label(for="checkb") CTF Season 2
 							li(role="option")
 								.form_checkbox-wrapper
 									input(type="checkbox", name="checkc", id="checkc")
-									label(for="checkc") 2019/20
-							li(role="option")
-								.form_checkbox-wrapper
-									input(type="checkbox", name="checkd", id="checkd" checked)
-									label(for="checkd") 2018/19
+									label(for="checkc") CTF Season 1
 
-							li
-								a link
-							li
-								a link
-							li
-								a link
 
 			.drop-down
 				.drop-down_label Filter by Team
