--- a/views/leaderboards.pug
+++ b/views/leaderboards.pug
@@ -46,23 +46,6 @@ block content
 
 			.stats-card
 				header
-					h3 Cap Every
-
-				table
-					tbody
-						each n, key in cap
-							tr(class=(key === 0 ? 'top' : ''))
-								td.rank
-									span.pos #{n.rank}.
-									| #{n.player}
-								td.text-r= n.cap_every
-
-				footer
-					a(href="/stats/caps") View full list
-						span.icon
-
-			.stats-card
-				header
 					h3 Team Cap Every
 
 				table
@@ -80,16 +63,16 @@ block content
 
 			.stats-card
 				header
-					h3 Prevent Per Min
+					h3 Team Concede Every
 
 				table
 					tbody
-						each n, key in prevent
+						each n, key in teamcapagainst
 							tr(class=(key === 0 ? 'top' : ''))
 								td.rank
 									span.pos #{n.rank}.
 									| #{n.player}
-								td.text-r= n.per_min
+								td.text-r= n.cap_every
 
 				footer
 					a(href="/stats/prevent") View full list
@@ -97,19 +80,19 @@ block content
 
 			.stats-card
 				header
-					h3 Return Every
+					h3 Cap Every
 
 				table
 					tbody
-						each n, key in returns
+						each n, key in cap
 							tr(class=(key === 0 ? 'top' : ''))
 								td.rank
 									span.pos #{n.rank}.
 									| #{n.player}
-								td.text-r= n.return_every
+								td.text-r= n.cap_every
 
 				footer
-					a(href="/stats/returns") View full list
+					a(href="/stats/caps") View full list
 						span.icon
 
 			.stats-card
@@ -131,6 +114,40 @@ block content
 
 			.stats-card
 				header
+					h3 Return Every
+
+				table
+					tbody
+						each n, key in returns
+							tr(class=(key === 0 ? 'top' : ''))
+								td.rank
+									span.pos #{n.rank}.
+									| #{n.player}
+								td.text-r= n.return_every
+
+				footer
+					a(href="/stats/returns") View full list
+						span.icon
+
+			.stats-card
+				header
+					h3 Prevent Per Min
+
+				table
+					tbody
+						each n, key in prevent
+							tr(class=(key === 0 ? 'top' : ''))
+								td.rank
+									span.pos #{n.rank}.
+									| #{n.player}
+								td.text-r= n.per_min
+
+				footer
+					a(href="/stats/prevent") View full list
+						span.icon
+
+			.stats-card
+				header
 					h3 Tag Every
 
 				table
@@ -144,4 +161,21 @@ block content
 
 				footer
 					a(href="/stats/tags") View full list
+						span.icon
+
+			.stats-card
+				header
+					h3 Pop Every
+
+				table
+					tbody
+						each n, key in pop
+							tr(class=(key === 0 ? 'top' : ''))
+								td.rank
+									span.pos #{n.rank}.
+									| #{n.player}
+								td.text-r= n.pop_every
+
+				footer
+					a(href="/stats/pop") View full list
 						span.icon
