--- a/src/css/custom/components.styl
+++ b/src/css/custom/components.styl
@@ -19,7 +19,7 @@
 
 	header
 		padding 0.8rem 10px  0.1em 10px
-		background linear-gradient(to top, #8a34e6, #a353f8)
+		background #9e4ce7
 
 		h3
 			font-weight: 700
@@ -431,5 +431,3 @@ table
 //slider active range
 .noUi-connect
 	background $tertiary-color
-
-
