--- a/src/css/custom/variables.styl
+++ b/src/css/custom/variables.styl
@@ -24,7 +24,7 @@ $table-cell-padding = 1em .8em
 $table-th-color = #6c6c6c
 $table-th-bg = #fbfbfb
 $table-th-padding = 1em .5em
-$table-highlight = linear-gradient(180deg, #8A34E6 0%, #501070 100%), rgba(220, 148, 254, 0.09)
+$table-highlight = linear-gradient(180deg, #9e4ce7 0%, #693a86 100%)
 $table-row-color = #e8e8e8
 $table-tr-hover-bg = #fef7ff
 
