--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -34,6 +34,11 @@
 		&.active
 			display block
 
+		.desc
+			color #363636
+			font-size .85rem
+			padding-bottom 1rem
+
 
 header
 	.stat-nav
@@ -54,6 +59,7 @@ header
 		background #ff2882
 		margin-top -1.5rem
 		margin-bottom 3rem
+		display none !important
 
 		&.active
 			// box-shadow 0 0 0 10000px rgba(white, .7)
