--- a/src/css/custom/variables.styl
+++ b/src/css/custom/variables.styl
@@ -24,7 +24,8 @@ $table-cell-padding = 1em .8em
 $table-th-color = #6c6c6c
 $table-th-bg = #fbfbfb
 $table-th-padding = 1em .5em
-$table-highlight = linear-gradient(180deg, #9e4ce7 0%, #693a86 100%)
+//$table-highlight = linear-gradient(180deg, #8A34E6 0%, #501070 100%)
+$table-highlight = linear-gradient(180deg, $tertiary-color, #b51e88)
 $table-row-color = #e8e8e8
 $table-tr-hover-bg = #fef7ff
 
@@ -34,11 +35,15 @@ $field-checkbox-width = 1.7em
 $checkbox-default-bg = rgba($tertiary-color,0.2)
 $checkbox-checked-bg = $tertiary-color
 $checkbox-hover-bg = rgba($tertiary-color,0.4)
+$checkbox-checked-row-bg = rgba(255, 244, 166, 0.2)
 
 $button-bg = $primary-color
 $button-bg-hover = $tertiary-color
 $button-delete-bg = #E05B52
 $button-delete-color = #E05B52
+
+$drop-scroll-thumb = #7b7b85
+$drop-scroll-track = white
 
 // not surrently used
 $form-element-padding-top-bottom = 0.8em
