--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -26,6 +26,7 @@
 	100%
 		opacity 1
 
+.page-select
 .page-filter
 	.drop-down_list
 		display none
@@ -38,45 +39,6 @@
 			color #363636
 			font-size .85rem
 			padding-bottom 1rem
-
-
-header
-	.stat-nav
-		cursor pointer
-		display inline-block
-
-		&:hover
-			color #ff2882
-
-	.sub-nav
-		// display none
-		// position absolute
-		width 95%
-		height 200px
-		// z-index 999
-		padding 1rem
-		font-size 0
-		background #ff2882
-		margin-top -1.5rem
-		margin-bottom 3rem
-		display none !important
-
-		&.active
-			// box-shadow 0 0 0 10000px rgba(white, .7)
-			animation slideUp .2s ease-in-out
-			display block
-
-		nav
-			display inline-block
-			width 33%
-			vertical-align top
-
-			h2
-				color white
-
-			li
-				font-size 1rem
-				color white
 
 
 
